--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="images/logo-conectados.svg" alt="Conectados.ao" width="180">
+              <!-- <img src="images/logo-conectados.svg" alt="Conectados.ao" width="180"> --> 
+                <h1>Conectados<span>.AO</span></h1>
             </a>
             
             <nav class="nav">
