--- a/funcionalidades.html
+++ b/funcionalidades.html
@@ -9,14 +9,18 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+<link rel="manifest" href="images/site.webmanifest">
 </head>
 <body>
     <!-- Cabeçalho -->
     <header class="header">
         <div class="container">
             <a href="index.html" class="logo">
-                <img src="images/logo-conectados.svg" alt="Conectados.ao" width="180">
+               <!--  <img src="images/logo-conectados.svg" alt="Conectados.ao" width="180">-->
+                 <h1>Conectados<span>.AO</span></h1>
             </a>
             
             <nav class="nav">
