--- a/index.html
+++ b/index.html
@@ -30,6 +30,15 @@
         })();
     </script>
     <!--End of Tawk.to Script-->
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-PN01X38RPH"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-PN01X38RPH');
+    </script>
 </head>
 
 <body>
