atualizando login, register e funcionalidades

--- a/contato.html
+++ b/contato.html
@@ -170,15 +170,105 @@
         </div>
     </section>
 
-    <!-- Rodapé -->
+ <!-- Rodapé -->
     <footer class="footer">
-        <!-- Mesmo rodapé da index.html -->
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <img src="images/logo-conectados-white.svg" alt="Conectados.ao" width="160" class="footer-logo">
+                    <p>O sistema de gestão empresarial desenvolvido para impulsionar negócios em Angola.</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Produto</h3>
+                    <ul>
+                        <li><a href="funcionalidades.html">Funcionalidades</a></li>
+                        <li><a href="planos.html">Planos</a></li>
+                        <li><a href="#">Tour Virtual</a></li>
+                        <li><a href="#">Novidades</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Empresa</h3>
+                    <ul>
+                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="#">Clientes</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Trabalhe conosco</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Suporte</h3>
+                    <ul>
+                        <li><a href="contato.html">Contato</a></li>
+                        <li><a href="#">Central de Ajuda</a></li>
+                        <li><a href="#">Documentação</a></li>
+                        <li><a href="#">Status do Sistema</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Contato</h3>
+                    <ul class="footer-contato">
+                        <li><i class="fas fa-map-marker-alt"></i> Luanda, Angola</li>
+                        <li><i class="fas fa-phone-alt"></i> +244 943 005 599</li>
+                        <li><i class="fas fa-envelope"></i> contato@conectados.ao</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2023 Conectados.ao - Todos os direitos reservados.</p>
+                <div class="footer-links">
+                    <a href="#">Termos de Uso</a>
+                    <a href="#">Política de Privacidade</a>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- Modal Teste Grátis -->
     <div class="modal" id="modal-teste-gratis">
-        <!-- Mesmo modal da index.html -->
+        <div class="modal-content">
+            <button class="modal-close">&times;</button>
+            <h3>Experimente grátis por 15 dias</h3>
+            <p>Preencha o formulário abaixo para criar sua conta de teste.</p>
+            <form id="form-modal-teste">
+                <div class="form-group">
+                    <input type="text" placeholder="Nome completo" required>
+                </div>
+                <div class="form-group">
+                    <input type="email" placeholder="E-mail corporativo" required>
+                </div>
+                <div class="form-group">
+                    <input type="tel" placeholder="Telefone" required>
+                </div>
+                <div class="form-group">
+                    <input type="text" placeholder="Nome da empresa" required>
+                </div>
+                <div class="form-group">
+                    <select required>
+                        <option value="">Selecione o segmento</option>
+                        <option value="varejo">Varejo</option>
+                        <option value="restaurante">Restaurante</option>
+                        <option value="distribuicao">Distribuição</option>
+                        <option value="industria">Indústria</option>
+                        <option value="outros">Outros</option>
+                    </select>
+                </div>
+                <button type="submit" class="btn btn-primary btn-block">Solicitar teste grátis</button>
+            </form>
+        </div>
     </div>
+
 
     <script src="js/script.js"></script>
     <script>
