--- a/registro.html
+++ b/registro.html
@@ -15,6 +15,36 @@
 
 <body>
     <!-- Mesmo header -->
+              <!-- Cabeçalho -->
+    <header class="header">
+        <div class="container">
+            <a href="index.html" class="logo">
+                <!-- <img src="images/logo-conectados.svg" alt="Conectados.ao" width="180"> -->
+                <h1>Conectados<span>.AO</span></h1>
+            </a>
+
+            <nav class="nav">
+                <ul class="nav-list">
+                    <li><a href="index.html" class="active">Início</a></li>
+                    <li><a href="funcionalidades.html">Funcionalidades</a></li>
+                    <li><a href="planos.html">Planos</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+                <!--  <a href="#teste-gratis" class="btn btn-primary">Teste Grátis</a> -->
+                <div class="header-buttons">
+                  <a href="login.html" class="btn btn-outline">Login</a> 
+                  <!--    <a href="registro.html" class="btn btn-secondary">Registrar</a>--> 
+                  <!-- <a href="#teste-gratis" class="btn btn-primary">Teste Grátis</a>--> 
+                </div>
+            </nav>
+
+            <button class="hamburger" aria-label="Menu">
+                <span></span>
+                <span></span>
+                <span></span>
+            </button>
+        </div>
+    </header>
     <main class="auth-container">
         <div class="auth-form">
             <h2>Criar Conta</h2>
@@ -29,6 +59,70 @@
         </div>
     </main>
     <!-- Mesmo footer -->
+      <!-- Rodapé -->
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-grid">
+                <div class="footer-col">
+                    <img src="images/logo-conectados-white.svg" alt="Conectados.ao" width="160" class="footer-logo">
+                    <p>O sistema de gestão empresarial desenvolvido para impulsionar negócios em Angola.</p>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Produto</h3>
+                    <ul>
+                        <li><a href="funcionalidades.html">Funcionalidades</a></li>
+                        <li><a href="planos.html">Planos</a></li>
+                        <li><a href="#">Tour Virtual</a></li>
+                        <li><a href="#">Novidades</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Empresa</h3>
+                    <ul>
+                        <li><a href="#">Sobre nós</a></li>
+                        <li><a href="#">Clientes</a></li>
+                        <li><a href="#">Blog</a></li>
+                        <li><a href="#">Trabalhe conosco</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Suporte</h3>
+                    <ul>
+                        <li><a href="contato.html">Contato</a></li>
+                        <li><a href="#">Central de Ajuda</a></li>
+                        <li><a href="#">Documentação</a></li>
+                        <li><a href="#">Status do Sistema</a></li>
+                    </ul>
+                </div>
+
+                <div class="footer-col">
+                    <h3>Contato</h3>
+                    <ul class="footer-contato">
+                        <li><i class="fas fa-map-marker-alt"></i> Luanda, Angola</li>
+                        <li><i class="fas fa-phone-alt"></i> +244 943 005 599</li>
+                        <li><i class="fas fa-envelope"></i> contato@conectados.ao</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="footer-bottom">
+                <p>&copy; 2023 Conectados.ao - Todos os direitos reservados.</p>
+                <div class="footer-links">
+                    <a href="#">Termos de Uso</a>
+                    <a href="#">Política de Privacidade</a>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
