--- a/login.html
+++ b/login.html
@@ -62,7 +62,7 @@
         <div class="container">
             <div class="footer-grid">
                 <div class="footer-col">
-                    <img src="images/logo-conectados-white.svg" alt="Conectados.ao" width="160" class="footer-logo">
+                    <img src="images/logo2.svg" alt="Conectados.ao" width="160" class="footer-logo">
                     <p>O sistema de gestão empresarial desenvolvido para impulsionar negócios em Angola.</p>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
