--- a/registro.html
+++ b/registro.html
@@ -3,7 +3,13 @@
 <html lang="pt-BR">
 
 <head>
-    <!-- Mesmo head das outras páginas -->
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description"
+    content="Sistema ERP online para pequenas e médias empresas em Angola. Gestão completa de vendas, estoque, financeiro e muito mais.">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <title>Registro | Conectados.ao</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
